PS-9970: fixed z-index

--- a/src/Pyz/Yves/ProductImageWidget/Theme/default/components/molecules/image-gallery/image-gallery.scss
+++ b/src/Pyz/Yves/ProductImageWidget/Theme/default/components/molecules/image-gallery/image-gallery.scss
@@ -17,7 +17,7 @@
                 right: 0;
                 bottom: 0;
                 background: $setting-color-alpha-2;
-                z-index: $setting-zi-default;
+                z-index: $setting-zi-element;
             }
 
             @include helper-breakpoint-media-min($lg) {
