--- a/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/styles/settings/_z-index.scss
@@ -1,5 +1,4 @@
 $setting-zi-element: 1;
-$setting-zi-default: 1;
 $setting-zi-company-menu: 10;
 $setting-zi-overlay: 700;
 $setting-zi-dropdown: 1000;
